[gd_scene load_steps=42 format=2]

[ext_resource path="res://hurtbox and hitbox/HurtBox.tscn" type="PackedScene" id=1]
[ext_resource path="res://Player/Player.gd" type="Script" id=2]
[ext_resource path="res://Player/asdfg.png" type="Texture" id=3]
[ext_resource path="res://Sounds/8-Bit Laser Gun Sound Effect.mp3" type="AudioStream" id=4]
[ext_resource path="res://Sounds/8 bit getting hurt 5 _ Brawl Stars Sound Effects.wav" type="AudioStream" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 9.49543, 9.40437 )

[sub_resource type="AnimationNodeAnimation" id=2]
animation = "idleLeft"

[sub_resource type="AnimationNodeAnimation" id=3]
animation = "idleRight"

[sub_resource type="AnimationNodeAnimation" id=4]
animation = "idleRight"

[sub_resource type="AnimationNodeAnimation" id=5]
animation = "idleRight"

[sub_resource type="AnimationNodeBlendSpace2D" id=6]
blend_point_0/node = SubResource( 2 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 3 )
blend_point_1/pos = Vector2( 1, 0 )
blend_point_2/node = SubResource( 4 )
blend_point_2/pos = Vector2( 0, 1 )
blend_point_3/node = SubResource( 5 )
blend_point_3/pos = Vector2( 0, -1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=7]
animation = "attackRight"

[sub_resource type="AnimationNodeAnimation" id=8]
animation = "attackRight"

[sub_resource type="AnimationNodeAnimation" id=9]
animation = "attackRight"

[sub_resource type="AnimationNodeAnimation" id=10]
animation = "attackRight"

[sub_resource type="AnimationNodeBlendSpace2D" id=11]
blend_point_0/node = SubResource( 7 )
blend_point_0/pos = Vector2( 1, 0 )
blend_point_1/node = SubResource( 8 )
blend_point_1/pos = Vector2( 0, -1.1 )
blend_point_2/node = SubResource( 9 )
blend_point_2/pos = Vector2( -1, 0 )
blend_point_3/node = SubResource( 10 )
blend_point_3/pos = Vector2( 0, 1.1 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1, 1.1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=12]
animation = "walkRight"

[sub_resource type="AnimationNodeAnimation" id=13]
animation = "walkRight"

[sub_resource type="AnimationNodeAnimation" id=14]
animation = "walkRight"

[sub_resource type="AnimationNodeAnimation" id=15]
animation = "walkRight"

[sub_resource type="AnimationNodeBlendSpace2D" id=16]
blend_point_0/node = SubResource( 12 )
blend_point_0/pos = Vector2( 0, 1.1 )
blend_point_1/node = SubResource( 13 )
blend_point_1/pos = Vector2( 1, 0 )
blend_point_2/node = SubResource( 14 )
blend_point_2/pos = Vector2( 0, -1.1 )
blend_point_3/node = SubResource( 15 )
blend_point_3/pos = Vector2( -1, 0 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1, 1.1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=17]
animation = "walkLeft"

[sub_resource type="AnimationNodeAnimation" id=18]
animation = "walkRight"

[sub_resource type="AnimationNodeAnimation" id=19]
animation = "walkRight"

[sub_resource type="AnimationNodeAnimation" id=20]
animation = "walkRight"

[sub_resource type="AnimationNodeBlendSpace2D" id=21]
blend_point_0/node = SubResource( 17 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 18 )
blend_point_1/pos = Vector2( 1, 0 )
blend_point_2/node = SubResource( 19 )
blend_point_2/pos = Vector2( 0, 1.1 )
blend_point_3/node = SubResource( 20 )
blend_point_3/pos = Vector2( 0, -1.1 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1, 1.1 )
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id=22]

[sub_resource type="AnimationNodeStateMachineTransition" id=23]

[sub_resource type="AnimationNodeStateMachineTransition" id=24]

[sub_resource type="AnimationNodeStateMachineTransition" id=25]

[sub_resource type="AnimationNodeStateMachineTransition" id=26]

[sub_resource type="AnimationNodeStateMachineTransition" id=27]

[sub_resource type="AnimationNodeStateMachine" id=28]
states/Idle/node = SubResource( 6 )
states/Idle/position = Vector2( 654, 150 )
states/attack/node = SubResource( 11 )
states/attack/position = Vector2( 650, 219 )
states/run_r/node = SubResource( 16 )
states/run_r/position = Vector2( 509, 150 )
states/walk/node = SubResource( 21 )
states/walk/position = Vector2( 836, 143 )
transitions = [ "Idle", "walk", SubResource( 22 ), "walk", "Idle", SubResource( 23 ), "Idle", "attack", SubResource( 24 ), "attack", "Idle", SubResource( 25 ), "run_r", "Idle", SubResource( 26 ), "Idle", "run_r", SubResource( 27 ) ]
start_node = "Idle"
graph_offset = Vector2( 295, 98 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=29]

[sub_resource type="Animation" id=30]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 10, 11, 10 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "attack_finished"
} ]
}
tracks/2/type = "audio"
tracks/2/path = NodePath("gunShot")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"clips": [ {
"end_offset": 0.122484,
"start_offset": 0.0,
"stream": ExtResource( 4 )
} ],
"times": PoolRealArray( 0.1 )
}
tracks/3/type = "value"
tracks/3/path = NodePath("gunShot:volume_db")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -20.806 ]
}

[sub_resource type="Animation" id=31]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 12, 13, 12 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "attack_finished"
} ]
}
tracks/2/type = "audio"
tracks/2/path = NodePath("gunShot")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"clips": [ {
"end_offset": 0.118455,
"start_offset": 0.0,
"stream": ExtResource( 4 )
} ],
"times": PoolRealArray( 0.1 )
}
tracks/3/type = "value"
tracks/3/path = NodePath("gunShot:volume_db")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -20.806 ]
}

[sub_resource type="Animation" id=32]
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}

[sub_resource type="Animation" id=33]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=34]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 2, 3, 2, 4, 5, 4 ]
}

[sub_resource type="Animation" id=35]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 6, 7, 6, 8, 9, 8 ]
}

[sub_resource type="RectangleShape2D" id=36]
extents = Vector2( 10, 20.6667 )

[node name="Player" type="KinematicBody2D"]
scale = Vector2( 3, 3 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 3 )
hframes = 14
frame = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 1.3874, 22.3967 )
shape = SubResource( 1 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 28 )
anim_player = NodePath("../AnimationPlayer")
parameters/playback = SubResource( 29 )
parameters/Idle/blend_position = Vector2( 0.0195627, 0 )
parameters/attack/blend_position = Vector2( 0, 0 )
parameters/run_r/blend_position = Vector2( 0, 0 )
parameters/walk/blend_position = Vector2( 0, 0 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/attackLeft = SubResource( 30 )
anims/attackRight = SubResource( 31 )
anims/idleLeft = SubResource( 32 )
anims/idleRight = SubResource( 33 )
anims/walkLeft = SubResource( 34 )
anims/walkRight = SubResource( 35 )

[node name="HurtBox" parent="." instance=ExtResource( 1 )]
position = Vector2( -42.3333, 9 )
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" parent="HurtBox" index="1"]
visible = false
position = Vector2( 42.6667, 2 )
shape = SubResource( 36 )

[node name="gunShot" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -20.806

[node name="hitSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -24.818
pitch_scale = 1.18

[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]

[editable path="HurtBox"]
